# tardigrade-micromorphic-tools

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.rst  ReadMe.mk  config.mk  environment.txt
docs/: CMakeLists.txt  api.rst  build.txt  changelog.rst  conf.py.in  dependencies.txt  gitlab_setup.rst  index.rst  release_philosophy.rst  targets.txt  user.rst
docs/doxygen/: Doxyfile.in
docs/html/: index.html
docs/sphinx/: api.rst  build.txt  changelog.rst  conf.py.in  dependencies.txt  gitlab_setup.rst  project_brief.txt  targets.txt  user.rst
modulefiles/: micromorphic_tools-env  tardigrade_micromorphic_tools-env
recipe/: meta.yaml
src/cpp/: CMakeLists.txt  micromorphic_tools.cpp  micromorphic_tools.h  tardigrade_micromorphic_tools.cpp  tardigrade_micromorphic_tools.h
src/cpp/tests/: CMakeLists.txt  test_micromorphic_tools.cpp  test_tardigrade_micromorphic_tools.cpp
src/cpp/tests/micromorphic_tools/: .gitignore  makefile  test_micromorphic_tools.cpp
src/cpp/tests/tardigrade_micromorphic_tools/: .gitignore
